deployments/trader/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: trader-provisioner
spec:
  selector:
    app: trader-provisioner
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trader-provisioner
  labels:
    app: trader-provisioner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trader-provisioner
  template:
    metadata:
      labels:
        app: trader-provisioner
    spec:
      serviceAccountName: trader-provisioner
      containers:
        - name: trader-provisioner
          image: coiner/trader-provisioner:0.0.1
          ports:
            - containerPort: 8080
